Edit README and Simplify configurations for spring-commons-fileupload